# job_notifications

./: .gitignore  .pypirc  Pipfile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: release_workflow.yml  tests.yml
src/job_notifications/: __init__.py  mail_services.py  notifications.py
src/job_notifications/utils/: decorators.py  exceptions.py  handled_exception.py
tests/: test_handled_exception.py  test_mail_services.py  test_notifications.py
tests/unit_tests/: test_handled_exception.py  test_mail_services.py  test_notifications.py  test_timer.py
