[metadata]
name = job_notifications
description = Simple package for sending ETL job notifications to Slack
author = Mark Young
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    job_notifications
install_requires =
    requests>=2.0
python_requires = >=3.9
package_dir =
    =src
zip_safe = False