[metadata]
name = job_notifications
version = 0.1.0
description = Simple package for sending ETL job notifications to Slack
author = Mark Young
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    job_notifications
install_requires =
    requests>=2.0
python_requires = >=3.9
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    flake8 >=6.0
    tox >= 4.0
    pytest >= 7.0
    pytest-cov >= 4.0
    mypy >= 1.0

[options.package_data]
job_notifications = py.typed

[flake8]
max-line-length=79